--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                                         <a href="#" class="nav-link icon-bullet"><i class="fas fa-bell text-muted fa-lg"></i></a>
                                     </li>
                                     <li class="nav-item ml-md-auto">
-                                        <a href="#" class="nav-link"><i class="fas fa-sign-out-alt text-danger fa-lg"></i></a>
+                                        <a href="#" class="nav-link" data-toggle="modal" data-target="#myModal"><i class="fas fa-sign-out-alt text-danger fa-lg"></i></a>
                                     </li>
                                 </ul>
                             </div>
@@ -136,6 +136,29 @@
         </div>
     </nav>
     <!-- Navbar End Here -->
+
+
+    <!-- Modal Start Here -->
+    <div class="modal fade" id="myModal">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Want to Leave ?</h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+
+                <div class="modal-body">
+                    Press Logout to Leave
+                </div>
+
+                <div class="modal-footer">
+                    <button class="btn btn-success" type="button" data-dismiss="modal">Stay Here</button>
+                    <button class="btn btn-danger" type="button" data-dismiss="modal">Logout</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Modal End Here -->
 
 
 
