--- a/index.html
+++ b/index.html
@@ -249,6 +249,94 @@
     <!-- Cards Section End Here -->
 
 
+    <!-- Table Section Start Here -->
+    <section>
+        <div class="container-fluid">
+            <div class="row mb-5">
+                <div class="col-xl-10 col-lg-9 col-md-8 ml-auto">
+                    <div class="row">
+                        <div class="col-12">
+                            <h3 class="text-muted text-center mb-3">Staff Salary</h3>
+                            <table class="table table-striped bg-light text-center">
+                                <thead>
+                                    <tr class="text-muted">
+                                        <th>#</th>
+                                        <th>Name</th>
+                                        <th>Salary</th>
+                                        <th>Date</th>
+                                        <th>Contact</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <th>1</th>
+                                        <td>John</td>
+                                        <td>$2000</td>
+                                        <td>25/05/2018</td>
+                                        <td><button type="button" class="btn btn-info btn-sm">Message</button></td>
+                                    </tr>
+                                    <tr>
+                                        <th>2</th>
+                                        <td>John</td>
+                                        <td>$2000</td>
+                                        <td>25/05/2018</td>
+                                        <td><button type="button" class="btn btn-info btn-sm">Message</button></td>
+                                    </tr>
+                                    <tr>
+                                        <th>3</th>
+                                        <td>John</td>
+                                        <td>$2000</td>
+                                        <td>25/05/2018</td>
+                                        <td><button type="button" class="btn btn-info btn-sm">Message</button></td>
+                                    </tr>
+                                    <tr>
+                                        <th>4</th>
+                                        <td>John</td>
+                                        <td>$2000</td>
+                                        <td>25/05/2018</td>
+                                        <td><button type="button" class="btn btn-info btn-sm">Message</button></td>
+                                    </tr>
+                                    <tr>
+                                        <th>5</th>
+                                        <td>John</td>
+                                        <td>$2000</td>
+                                        <td>25/05/2018</td>
+                                        <td><button type="button" class="btn btn-info btn-sm">Message</button></td>
+                                    </tr>
+                                </tbody>
+                            </table>
+
+                            <!-- Pagination Start Here -->
+                            <nav class="">
+                                <ul class="pagination justify-content-center">
+                                    <li class="page-item">
+                                        <a href="#" class="page-link py-2 px-3"><span>&laquo</span></a>
+                                    </li>
+                                    <li class="page-item active">
+                                        <a href="#" class="page-link py-2 px-3">1</a>
+                                    </li>
+                                    <li class="page-item">
+                                        <a href="#" class="page-link py-2 px-3">2</a>
+                                    </li>
+                                    <li class="page-item">
+                                        <a href="#" class="page-link py-2 px-3">3</a>
+                                    </li>
+                                    <li class="page-item">
+                                        <a href="#" class="page-link py-2 px-3"><span>&raquo</span></a>
+                                    </li>
+                                </ul>
+                            </nav>
+                            <!-- Pagination End Here -->
+                        </div>
+                        <div class="col-12"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Table Section End Here -->
+
+
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
