Adding Second Table

--- a/index.html
+++ b/index.html
@@ -254,8 +254,8 @@
         <div class="container-fluid">
             <div class="row mb-5">
                 <div class="col-xl-10 col-lg-9 col-md-8 ml-auto">
-                    <div class="row">
-                        <div class="col-12">
+                    <div class="row align-items-center">
+                        <div class="col-12 col-xl-6 mb-4 mb-xl-0">
                             <h3 class="text-muted text-center mb-3">Staff Salary</h3>
                             <table class="table table-striped bg-light text-center">
                                 <thead>
@@ -307,7 +307,7 @@
                             </table>
 
                             <!-- Pagination Start Here -->
-                            <nav class="">
+                            <nav>
                                 <ul class="pagination justify-content-center">
                                     <li class="page-item">
                                         <a href="#" class="page-link py-2 px-3"><span>&laquo</span></a>
@@ -328,7 +328,79 @@
                             </nav>
                             <!-- Pagination End Here -->
                         </div>
-                        <div class="col-12"></div>
+                        <div class="col-12 col-xl-6">
+                                <h3 class="text-muted text-center mb-3">Recent Payments</h3>
+                                <table class="table text-center table-dark table-hover">
+                                        <thead>
+                                                <tr class="text-muted">
+                                                    <th>#</th>
+                                                    <th>Name</th>
+                                                    <th>Price</th>
+                                                    <th>Date</th>
+                                                    <th>Status</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody>
+                                                    <tr>
+                                                            <th>1</th>
+                                                            <td>Mona</td>
+                                                            <td>$2000</td>
+                                                            <td>25/05/2018</td>
+                                                            <td><span class="badge badge-success w-75 py-2">Approved</span></td>
+                                                        </tr>
+                                                    <tr>
+                                                            <th>2</th>
+                                                            <td>Mona</td>
+                                                            <td>$2000</td>
+                                                            <td>25/05/2018</td>
+                                                            <td><span class="badge badge-success w-75 py-2">Approved</span></td>
+                                                        </tr>
+                                                    <tr>
+                                                            <th>3</th>
+                                                            <td>Mona</td>
+                                                            <td>$2000</td>
+                                                            <td>25/05/2018</td>
+                                                            <td><span class="badge badge-danger w-75 py-2">Pending</span></td>
+                                                        </tr>
+                                                    <tr>
+                                                            <th>4</th>
+                                                            <td>Mona</td>
+                                                            <td>$2000</td>
+                                                            <td>25/05/2018</td>
+                                                            <td><span class="badge badge-danger w-75 py-2">Pending</span></td>
+                                                        </tr>
+                                                    <tr>
+                                                            <th>5</th>
+                                                            <td>Mona</td>
+                                                            <td>$2000</td>
+                                                            <td>25/05/2018</td>
+                                                            <td><span class="badge badge-success w-75 py-2">Approved</span></td>
+                                                        </tr>
+                                            </tbody>
+                                </table>
+
+                                <!-- Pagination Start Here -->
+                            <nav class="">
+                                    <ul class="pagination justify-content-center">
+                                        <li class="page-item">
+                                            <a href="#" class="page-link py-2 px-3"><span>Previous</span></a>
+                                        </li>
+                                        <li class="page-item active">
+                                            <a href="#" class="page-link py-2 px-3">1</a>
+                                        </li>
+                                        <li class="page-item">
+                                            <a href="#" class="page-link py-2 px-3">2</a>
+                                        </li>
+                                        <li class="page-item">
+                                            <a href="#" class="page-link py-2 px-3">3</a>
+                                        </li>
+                                        <li class="page-item">
+                                            <a href="#" class="page-link py-2 px-3"><span>Next</span></a>
+                                        </li>
+                                    </ul>
+                                </nav>
+                                <!-- Pagination End Here -->
+                        </div>
                     </div>
                 </div>
             </div>
