--- a/index.html
+++ b/index.html
@@ -1,23 +1,28 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="title icon" href="images/admin-title.jfif">
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/js/all.js" integrity="" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/js/all.js" integrity=""
+        crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 
     <title>Admin Portal</title>
-  </head>
-  <body>
-    
+</head>
+
+<body>
+
     <!-- Navbar Start Here -->
     <nav class="navbar navbar-expand-md navbar-light">
-        <button class="navbar-toggler ml-auto mb-2 bg-light" type="button" data-toggle="collapse" data-target="#myNavbar">
+        <button class="navbar-toggler ml-auto mb-2 bg-light" type="button" data-toggle="collapse"
+            data-target="#myNavbar">
             <span class="navbar-toggler-icon"></span>
         </button>
 
@@ -26,7 +31,8 @@
                 <div class="row">
                     <!-- Sidebar Start Here -->
                     <div class="col-xl-2 col-lg-3 col-md-4 sidebar fixed-top">
-                        <a href="#" class="navbar-brand text-white d-block mx-auto text-center py-3 mb-4 bottom-border">CodeAndCreate</a>
+                        <a href="#"
+                            class="navbar-brand text-white d-block mx-auto text-center py-3 mb-4 bottom-border">CodeAndCreate</a>
                         <div class="bottom-border pb-3">
                             <img src="images/admin.png" alt="" width="50" class="rounded-circle mr-3">
                             <a href="#" class="text-white">Mike Henri</a>
@@ -110,7 +116,8 @@
                                 <form>
                                     <div class="input-group">
                                         <input type="text" class="form-control search-input" placeholder="Search...">
-                                        <button class="btn btn-light btn-sm search-button" type="button"><i class="fas fa-search text-danger"></i></button>
+                                        <button class="btn btn-light btn-sm search-button" type="button"><i
+                                                class="fas fa-search text-danger"></i></button>
                                     </div>
                                 </form>
                             </div>
@@ -118,13 +125,16 @@
                             <div class="col-md-3">
                                 <ul class="navbar-nav">
                                     <li class="nav-item icon-parent">
-                                        <a href="#" class="nav-link icon-bullet"><i class="fas fa-comments text-muted fa-lg"></i></a>
+                                        <a href="#" class="nav-link icon-bullet"><i
+                                                class="fas fa-comments text-muted fa-lg"></i></a>
                                     </li>
                                     <li class="nav-item icon-parent">
-                                        <a href="#" class="nav-link icon-bullet"><i class="fas fa-bell text-muted fa-lg"></i></a>
+                                        <a href="#" class="nav-link icon-bullet"><i
+                                                class="fas fa-bell text-muted fa-lg"></i></a>
                                     </li>
                                     <li class="nav-item ml-md-auto">
-                                        <a href="#" class="nav-link" data-toggle="modal" data-target="#myModal"><i class="fas fa-sign-out-alt text-danger fa-lg"></i></a>
+                                        <a href="#" class="nav-link" data-toggle="modal" data-target="#myModal"><i
+                                                class="fas fa-sign-out-alt text-danger fa-lg"></i></a>
                                     </li>
                                 </ul>
                             </div>
@@ -240,7 +250,7 @@
                             </div>
                         </div>
 
-                        
+
                     </div>
                 </div>
             </div>
@@ -329,77 +339,77 @@
                             <!-- Pagination End Here -->
                         </div>
                         <div class="col-12 col-xl-6">
-                                <h3 class="text-muted text-center mb-3">Recent Payments</h3>
-                                <table class="table text-center table-dark table-hover">
-                                        <thead>
-                                                <tr class="text-muted">
-                                                    <th>#</th>
-                                                    <th>Name</th>
-                                                    <th>Price</th>
-                                                    <th>Date</th>
-                                                    <th>Status</th>
-                                                </tr>
-                                            </thead>
-                                            <tbody>
-                                                    <tr>
-                                                            <th>1</th>
-                                                            <td>Mona</td>
-                                                            <td>$2000</td>
-                                                            <td>25/05/2018</td>
-                                                            <td><span class="badge badge-success w-75 py-2">Approved</span></td>
-                                                        </tr>
-                                                    <tr>
-                                                            <th>2</th>
-                                                            <td>Mona</td>
-                                                            <td>$2000</td>
-                                                            <td>25/05/2018</td>
-                                                            <td><span class="badge badge-success w-75 py-2">Approved</span></td>
-                                                        </tr>
-                                                    <tr>
-                                                            <th>3</th>
-                                                            <td>Mona</td>
-                                                            <td>$2000</td>
-                                                            <td>25/05/2018</td>
-                                                            <td><span class="badge badge-danger w-75 py-2">Pending</span></td>
-                                                        </tr>
-                                                    <tr>
-                                                            <th>4</th>
-                                                            <td>Mona</td>
-                                                            <td>$2000</td>
-                                                            <td>25/05/2018</td>
-                                                            <td><span class="badge badge-danger w-75 py-2">Pending</span></td>
-                                                        </tr>
-                                                    <tr>
-                                                            <th>5</th>
-                                                            <td>Mona</td>
-                                                            <td>$2000</td>
-                                                            <td>25/05/2018</td>
-                                                            <td><span class="badge badge-success w-75 py-2">Approved</span></td>
-                                                        </tr>
-                                            </tbody>
-                                </table>
+                            <h3 class="text-muted text-center mb-3">Recent Payments</h3>
+                            <table class="table text-center table-dark table-hover">
+                                <thead>
+                                    <tr class="text-muted">
+                                        <th>#</th>
+                                        <th>Name</th>
+                                        <th>Price</th>
+                                        <th>Date</th>
+                                        <th>Status</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <th>1</th>
+                                        <td>Mona</td>
+                                        <td>$2000</td>
+                                        <td>25/05/2018</td>
+                                        <td><span class="badge badge-success w-75 py-2">Approved</span></td>
+                                    </tr>
+                                    <tr>
+                                        <th>2</th>
+                                        <td>Mona</td>
+                                        <td>$2000</td>
+                                        <td>25/05/2018</td>
+                                        <td><span class="badge badge-success w-75 py-2">Approved</span></td>
+                                    </tr>
+                                    <tr>
+                                        <th>3</th>
+                                        <td>Mona</td>
+                                        <td>$2000</td>
+                                        <td>25/05/2018</td>
+                                        <td><span class="badge badge-danger w-75 py-2">Pending</span></td>
+                                    </tr>
+                                    <tr>
+                                        <th>4</th>
+                                        <td>Mona</td>
+                                        <td>$2000</td>
+                                        <td>25/05/2018</td>
+                                        <td><span class="badge badge-danger w-75 py-2">Pending</span></td>
+                                    </tr>
+                                    <tr>
+                                        <th>5</th>
+                                        <td>Mona</td>
+                                        <td>$2000</td>
+                                        <td>25/05/2018</td>
+                                        <td><span class="badge badge-success w-75 py-2">Approved</span></td>
+                                    </tr>
+                                </tbody>
+                            </table>
 
-                                <!-- Pagination Start Here -->
+                            <!-- Pagination Start Here -->
                             <nav class="">
-                                    <ul class="pagination justify-content-center">
-                                        <li class="page-item">
-                                            <a href="#" class="page-link py-2 px-3"><span>Previous</span></a>
-                                        </li>
-                                        <li class="page-item active">
-                                            <a href="#" class="page-link py-2 px-3">1</a>
-                                        </li>
-                                        <li class="page-item">
-                                            <a href="#" class="page-link py-2 px-3">2</a>
-                                        </li>
-                                        <li class="page-item">
-                                            <a href="#" class="page-link py-2 px-3">3</a>
-                                        </li>
-                                        <li class="page-item">
-                                            <a href="#" class="page-link py-2 px-3"><span>Next</span></a>
-                                        </li>
-                                    </ul>
-                                </nav>
-                                <!-- Pagination End Here -->
+                                <ul class="pagination justify-content-center">
+                                    <li class="page-item">
+                                        <a href="#" class="page-link py-2 px-3"><span>Previous</span></a>
+                                    </li>
+                                    <li class="page-item active">
+                                        <a href="#" class="page-link py-2 px-3">1</a>
+                                    </li>
+                                    <li class="page-item">
+                                        <a href="#" class="page-link py-2 px-3">2</a>
+                                    </li>
+                                    <li class="page-item">
+                                        <a href="#" class="page-link py-2 px-3">3</a>
+                                    </li>
+                                    <li class="page-item">
+                                        <a href="#" class="page-link py-2 px-3"><span>Next</span></a>
+                                    </li>
+                                </ul>
+                            </nav>
+                            <!-- Pagination End Here -->
                         </div>
                     </div>
                 </div>
@@ -409,11 +419,65 @@
     <!-- Table Section End Here -->
 
 
+    <!-- Progess / task list Start Here -->
+    <section>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-xl-10 col-lg-9 col-md-8 ml-auto">
+                    <div class="row mb-4">
+                        <div class="col-xl-6 col-12">
+                            <div class="bg-dark text-white p-4 rounded">
+                                <h4 class="mb-5">Conversion Rates</h4>
+                                <h6 class="mb-3">Google Crome</h6>
+                                <div class="progress mb-4" style="height: 20px">
+                                    <div class="progress-bar progress-bar-striped font-weight-bold" style="width: 91%">
+                                        91%
+                                    </div>
+                                </div>
+                                <h6 class="mb-3">Mozilla Firefox</h6>
+                                <div class="progress mb-4" style="height: 20px">
+                                    <div class="progress-bar bg-success progress-bar-striped font-weight-bold"
+                                        style="width: 82%">
+                                        82%
+                                    </div>
+                                </div>
+                                <h6 class="mb-3">Safari</h6>
+                                <div class="progress mb-4" style="height: 20px">
+                                    <div class="progress-bar bg-danger progress-bar-striped font-weight-bold"
+                                        style="width: 67%">
+                                        67%
+                                    </div>
+                                </div>
+                                <h6 class="mb-3">Internet Explorer</h6>
+                                <div class="progress mb-4" style="height: 20px">
+                                    <div class="progress-bar bg-info progress-bar-striped font-weight-bold"
+                                        style="width: 10%">
+                                        10%
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xl-6 col-12"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Progess / task list End Here -->
+
+
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
     <script src="script.js"></script>
-  </body>
+</body>
+
 </html>
