Adding Activities accordion

--- a/index.html
+++ b/index.html
@@ -551,6 +551,78 @@
     <!-- Progess / task list End Here -->
 
 
+    <!-- Activities / Quick posts Start Here -->
+    <section>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-xl-10 col-lg-9 col-md-8 ml-auto">
+                    <div class="row">
+                        <div class="col-xl-7">
+                            <h4 class="text-muted mb-4">Recent Customer Activities</h4>
+                            <div id="accordion">
+                                <div class="card">
+                                    <div class="card-header">
+                                        <button class="btn btn-block bg-secondary text-light text-left" data-toggle="collapse" data-target="#myCollapseBody1">
+                                            <img src="images/cust.png" alt="" width="50" class="mr-3 rounded">
+                                            Jenefer posted a new comment
+                                        </button>
+                                    </div>
+                                    <div class="collapse show" id="myCollapseBody1" data-parent="#accordion">
+                                        <div class="card-body">
+                                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Pariatur distinctio possimus tempora doloribus sit perspiciatis, atque porro quas voluptates quo eligendi, consequatur tempore rerum quia.
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="card">
+                                    <div class="card-header">
+                                        <button class="btn btn-block bg-secondary text-light text-left" data-toggle="collapse" data-target="#myCollapseBody2">
+                                            <img src="images/cust.png" alt="" width="50" class="mr-3 rounded">
+                                            Mark posted a new comment
+                                        </button>
+                                    </div>
+                                    <div class="collapse" id="myCollapseBody2" data-parent="#accordion">
+                                        <div class="card-body">
+                                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Pariatur distinctio possimus tempora doloribus sit perspiciatis, atque porro quas voluptates quo eligendi, consequatur tempore rerum quia.
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="card">
+                                    <div class="card-header">
+                                        <button class="btn btn-block bg-secondary text-light text-left" data-toggle="collapse" data-target="#myCollapseBody3">
+                                            <img src="images/cust.png" alt="" width="50" class="mr-3 rounded">
+                                            Jenefer posted a new comment
+                                        </button>
+                                    </div>
+                                    <div class="collapse" id="myCollapseBody3" data-parent="#accordion">
+                                        <div class="card-body">
+                                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Pariatur distinctio possimus tempora doloribus sit perspiciatis, atque porro quas voluptates quo eligendi, consequatur tempore rerum quia.
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="card">
+                                    <div class="card-header">
+                                        <button class="btn btn-block bg-secondary text-light text-left" data-toggle="collapse" data-target="#myCollapseBody4">
+                                            <img src="images/cust.png" alt="" width="50" class="mr-3 rounded">
+                                            Mark posted a new comment
+                                        </button>
+                                    </div>
+                                    <div class="collapse" id="myCollapseBody4" data-parent="#accordion">
+                                        <div class="card-body">
+                                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Pariatur distinctio possimus tempora doloribus sit perspiciatis, atque porro quas voluptates quo eligendi, consequatur tempore rerum quia.
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xl-5"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Activities / Quick posts End Here -->
+
+
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
