--- a/index.html
+++ b/index.html
@@ -663,6 +663,31 @@
     <!-- Activities / Quick posts End Here -->
 
 
+    <!-- Footer Start Here -->
+    <footer>
+        <div class="container-fluid">
+            <div class="row border-top pt-3">
+                <div class="col-xl-10 col-lg-9 col-md-8 ml-auto">
+                    <div class="row">
+                        <div class="col-lg-6 text-center">
+                            <ul class="list-inline">
+                                <li class="list-inline-item mr-2"><a href="#" class="text-dark">CodeAndCreate</a></li>
+                                <li class="list-inline-item mr-2"><a href="#" class="text-dark">About</a></li>
+                                <li class="list-inline-item mr-2"><a href="#" class="text-dark">Support</a></li>
+                                <li class="list-inline-item mr-2"><a href="#" class="text-dark">Blog</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-lg-6 text-center">
+                            <p>&copy; 2019 Copyright. Made with <i class="fas fa-heart text-danger"></i> by <span class="text-success">Programming Guru.</span></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- Footer End Here -->
+
+
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
